--- a/index.html
+++ b/index.html
@@ -4,12 +4,22 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/tabbar.css"/>
     <link rel="stylesheet" href="css/main.css"/>
+    <link href="css/style.css" rel="stylesheet" type="text/css" />
+    <link href="css/ripple.css" rel="stylesheet" type="text/css" />
+    <script src="js/jquery-1.9.1.min.js" type="text/javascript"></script>
+    <script src="js/ripple.js" type="text/javascript"></script>
+    <script src="js/script.js" type="text/javascript"></script>
     <style>
         @font-face { font-family: Roboto; src: url('fonts/Roboto-Medium.ttf'); }
         @font-face { font-family: Roboto-Medium; src: url('fonts/Roboto-Medium.ttf'); }
     </style>
   </head>
   <body>
+     <div class="windowbuttons">
+      <div class="ripple windowbutton windowbutton-close"></div>
+      <div class="windowbutton windowbutton-maximize"></div>
+      <div class="windowbutton windowbutton-minimize"></div>
+    </div>
     <script>if (typeof module === 'object') {window.module = module; module = undefined;}</script><script src="js/jquery-3.1.0.min.js"></script><script src="js/jquery-ui.min.js"></script><script>if (window.module) module = window.module;</script>
     <style>
     </style>
