--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/tabbar.css"/>
     <link rel="stylesheet" href="css/main.css"/>
+    <link rel="stylesheet" href="css/browser.css"/>
     <link href="css/ripple.css" rel="stylesheet" type="text/css" />
 
     <style>
@@ -35,4 +36,5 @@
   <script src="js/tabbar.js"></script>
   <script src="js/ripple.js" type="text/javascript"></script>
   <script src="js/main.js"></script>
+
 </html>
