--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <style>
         @font-face { font-family: Roboto; src: url('fonts/Roboto-Medium.ttf'); }
         @font-face { font-family: Roboto-Medium; src: url('fonts/Roboto-Medium.ttf'); }
+        @font-face { font-family: Roboto-Light; src: url('fonts/Roboto-Light.ttf'); }
     </style>
   </head>
   <body>
@@ -31,7 +32,7 @@
     </div>
 
   </body>
-
+  <script src="js/colorBrightness.js"></script>
   <script src="js/classes.js"></script>
   <script src="js/tabbar.js"></script>
   <script src="js/ripple.js" type="text/javascript"></script>
