--- a/page.html
+++ b/page.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>New tab</title>
+    <meta name='theme-color' content='#ffffff'>
   </head>
   <body>
     <style>
