added icons to menu, fixed fonts, fixed getting color from website, added basic download handler

--- a/history.html
+++ b/history.html
@@ -5,7 +5,7 @@
     <title>History</title>
     <link rel="stylesheet" href="css/history.css"/>
     <style>
-        @font-face { font-family: Roboto; src: url('fonts/Roboto-Medium.ttf'); }
+        @font-face { font-family: "Roboto"; src: url('fonts/Roboto.ttf'); }
         @font-face { font-family: Roboto-Medium; src: url('fonts/Roboto-Medium.ttf'); }
         @font-face { font-family: Roboto-Light; src: url('fonts/Roboto-Light.ttf'); }
     </style>
