--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="css/ripple.css" rel="stylesheet" type="text/css" />
 
     <style>
-        @font-face { font-family: Roboto; src: url('fonts/Roboto-Medium.ttf'); }
+        @font-face { font-family: Roboto; src: url('fonts/Roboto.ttf'); }
         @font-face { font-family: Roboto-Medium; src: url('fonts/Roboto-Medium.ttf'); }
         @font-face { font-family: Roboto-Light; src: url('fonts/Roboto-Light.ttf'); }
     </style>
