--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     </div>
 
   </body>
+  <script src="js/FileSaver.min.js"></script>
   <script src="js/colorBrightness.js"></script>
   <script src="js/classes.js"></script>
   <script src="js/tabwindow.js"></script>
