added suggestions system

--- a/browser.html
+++ b/browser.html
@@ -27,6 +27,7 @@
     <webview class="webview" autosize="on" src="about:blank" style="display:flex;">
 
     </webview>
+
     <div class="menu" style="z-index: 9999;">
       <ul class="menu-items" style="z-index: 9999;background-color: #fff;">
         <li data-ripple-color="#444" class="menu-item ripple"><div style="background-image: url('img/settings.png');" class="menu-icon"></div><p style="display: inline;">Settings</p></li>
@@ -39,6 +40,11 @@
         <li data-ripple-color="#444" class="menu-item ripple"><div style="background-image: url('img/dev.png');"  class="menu-icon"></div><p style="display: inline;">Developer tools</p></li>
         <li data-ripple-color="#444" class="menu-item ripple"><div style="background-image: url('img/screenshot.png');"  class="menu-icon"></div><p style="display: inline;">Take screenshot</p></li>
         <li data-ripple-color="#444" class="menu-item ripple"><div style="background-image: url('img/privacy.png');"  class="menu-icon"></div><p style="display: inline;">Private mode</p></li>
+      </ul>
+    </div>
+    <div class="suggestions">
+      <ul class="suggestions-ul">
+
       </ul>
     </div>
 
