small layout fixes

--- a/newtab.html
+++ b/newtab.html
@@ -1,10 +1,20 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <meta charset="utf-8">
     <title>New tab</title>
-  </head>
-  <body>
+    <meta name="theme-color" content="#fff">
+</head>
+
+<body>
+    <style>
+        body {
+            background-color: #ffffff;
+            margin: 0;
+        }
+    </style>
     <p>Hello!</p>
-  </body>
+</body>
+
 </html>
