--- a/index.html
+++ b/index.html
@@ -1,32 +1,56 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="css/tabbar.css"/>
-    <link rel="stylesheet" href="css/main.css"/>
-    <link rel="stylesheet" href="css/menu.css"/>
-    <link rel="stylesheet" href="css/browser.css"/>
+    <link rel="stylesheet" href="css/tabbar.css" />
+    <link rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" href="css/menu.css" />
+    <link rel="stylesheet" href="css/browser.css" />
     <link href="css/ripple.css" rel="stylesheet" type="text/css" />
 
     <style>
-        @font-face { font-family: Roboto; src: url('fonts/Roboto.ttf'); }
-        @font-face { font-family: Roboto-Medium; src: url('fonts/Roboto-Medium.ttf'); }
-        @font-face { font-family: Roboto-Light; src: url('fonts/Roboto-Light.ttf'); }
+        @font-face {
+            font-family: Roboto;
+            src: url('fonts/Roboto.ttf');
+        }
+
+        @font-face {
+            font-family: Roboto-Medium;
+            src: url('fonts/Roboto-Medium.ttf');
+        }
+
+        @font-face {
+            font-family: Roboto-Light;
+            src: url('fonts/Roboto-Light.ttf');
+        }
     </style>
-  </head>
-  <body>
-    <script>if (typeof module === 'object') {window.module = module; module = undefined;}</script><script src="js/jquery-3.1.0.min.js"></script><script src="js/jquery-ui.min.js"></script><script>if (window.module) module = window.module;</script>
+</head>
+
+<body>
+    <script>
+        if (typeof module === 'object') {
+            window.module = module;
+            module = undefined;
+        }
+    </script>
+    <script src="js/jquery-3.1.0.min.js"></script>
+    <script src="js/jquery-ui.min.js"></script>
+    <script>
+        if (window.module) module = window.module;
+    </script>
     <style>
+
     </style>
     <div class="titlebar" id="titlebar">
-      <div class="ripple windowbutton windowbutton-close"></div>
-      <div class="windowbutton windowbutton-maximize"></div>
-      <div class="windowbutton windowbutton-minimize"></div>
-      <div class="tabbar" id="tabbar">
-        <div class="addTabBtn" id="addTab">
-          <div class="addTabImg"></div>
+        <div class="ripple windowbutton windowbutton-close"></div>
+        <div class="windowbutton windowbutton-maximize"></div>
+        <div class="windowbutton windowbutton-minimize"></div>
+        <div class="tabbar" id="tabbar">
+            <div class="addTabBtn" id="addTab">
+                <div class="addTabImg"></div>
+            </div>
         </div>
-      </div>
     </div>
 
     </script>
@@ -34,13 +58,13 @@
 
     </div>
 
-  </body>
-  <script src="js/FileSaver.min.js"></script>
-  <script src="js/colorBrightness.js"></script>
-  <script src="js/classes.js"></script>
-  <script src="js/tabwindow.js"></script>
-  <script src="js/tabbar.js"></script>
-  <script src="js/ripple.js"></script>
-  <script src="js/main.js"></script>
+</body>
+<script src="js/utils.js"></script>
+<script src="js/colorBrightness.js"></script>
+<script src="js/classes.js"></script>
+<script src="js/tabwindow.js"></script>
+<script src="js/tabbar.js"></script>
+<script src="js/ripple.js"></script>
+<script src="js/main.js"></script>
 
 </html>
