--- a/newtab.html
+++ b/newtab.html
@@ -1,20 +1,31 @@
 <!DOCTYPE html>
 <html>
-
-<head>
+  <head>
     <meta charset="utf-8">
     <title>New tab</title>
-    <meta name="theme-color" content="#fff">
-</head>
-
-<body>
+    <meta name='theme-color' content='#ffffff'>
+  </head>
+  <body>
     <style>
-        body {
-            background-color: #ffffff;
-            margin: 0;
-        }
-    </style>
-    <p>Hello!</p>
-</body>
+      body {
+        background-color: white;
+        font-family: 'Roboto', sans-serif;
+      }
+      @font-face {
+          font-family: Roboto;
+          src: url('fonts/Roboto.ttf');
+      }
 
+      @font-face {
+          font-family: Roboto-Medium;
+          src: url('fonts/Roboto-Medium.ttf');
+      }
+
+      @font-face {
+          font-family: Roboto-Light;
+          src: url('fonts/Roboto-Light.ttf');
+      }
+    </style>
+    <h1 style="margin-left: 50px; margin-top: 25px; margin-right: 50px;">Welcome to the new tab page! This page is in work in progress.</h1>
+  </body>
 </html>
