--- a/browser.html
+++ b/browser.html
@@ -92,7 +92,11 @@
         <li data-icon="img/back.png" data-page="7">test7</li>
         <li data-icon="img/close.png" data-page="8">name8</li>
         <li data-icon="img/back.png" data-page="9">test9</li>
-
+        <li data-icon="img/back.png" data-page="5">test5</li>
+        <li data-icon="img/close.png" data-page="6">name6</li>
+        <li data-icon="img/back.png" data-page="7">test7</li>
+        <li data-icon="img/close.png" data-page="8">name8</li>
+        <li data-icon="img/back.png" data-page="9">test9</li>
       </ul>
       <div class="ex-cards"></div>
       <ul class="ex-move">
