--- a/browser.html
+++ b/browser.html
@@ -20,8 +20,8 @@
     <div class="searchBox">
       <input class="searchInput"></input>
     </div>
-    <div class="ripple exBtn">
-      <div class="exBtnIcon">
+    <div class="ripple extBtn">
+      <div class="extBtnIcon">
       </div>
     </div>
   </div>
@@ -81,25 +81,11 @@
 
       </ul>
     </div>
-    <div class="ex-menu">
-      <ul class="ex-elements">
-        <li data-icon="img/back.png" data-page="1">test1</li>
-        <li data-icon="img/close.png" data-page="2">name2</li>
-        <li data-icon="img/back.png" data-page="3">test3</li>
-        <li data-icon="img/close.png" data-page="4">name4</li>
-        <li data-icon="img/back.png" data-page="5">test5</li>
-        <li data-icon="img/close.png" data-page="6">name6</li>
-        <li data-icon="img/back.png" data-page="7">test7</li>
-        <li data-icon="img/close.png" data-page="8">name8</li>
-        <li data-icon="img/back.png" data-page="9">test9</li>
-        <li data-icon="img/back.png" data-page="5">test5</li>
-        <li data-icon="img/close.png" data-page="6">name6</li>
-        <li data-icon="img/back.png" data-page="7">test7</li>
-        <li data-icon="img/close.png" data-page="8">name8</li>
-        <li data-icon="img/back.png" data-page="9">test9</li>
+    <div class="ext-menu">
+      <ul class="ext-page">
+
       </ul>
-      <div class="ex-cards"></div>
-      <ul class="ex-move">
+      <ul class="ext-indicators">
 
       </ul>
     </div>
