added extensions api

--- a/index.html
+++ b/index.html
@@ -66,5 +66,6 @@
 <script src="js/tabbar.js"></script>
 <script src="js/ripple.js"></script>
 <script src="js/main.js"></script>
+<script src="js/api.js"></script>
 
 </html>
