fixed history load and fixed icons height & width

--- a/browser.html
+++ b/browser.html
@@ -28,7 +28,7 @@
 
   <div id="webviewcontainer" style="width: 100%; height: calc(100vh - 74px);margin-top: -20px; position: relative;">
 
-    <webview class="webview" autosize="on" src="about:blank" style="display:flex;">
+    <webview class="webview" preload="./js/preload.js" autosize="on" src="about:blank" style="display:flex;">
 
     </webview>
 
