--- a/controls.html
+++ b/controls.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <div class="c">
-      <div class="mdc-switch">
+      <div class="mdc-switch" data-toggle-off-color="#f1c40f" data-ellipse-toggle-off-color="#f39c12" data-toggle-on-color="#9b59b6"  data-ellipse-toggle-on-color="#8e44ad">
         <div class="s-container">
           <div class="lever">
 
