--- a/browser.html
+++ b/browser.html
@@ -26,9 +26,9 @@
     </div>
   </div>
 
-  <div id="webviewcontainer" style="width: 100%; height: calc(100vh - 74px);margin-top: -20px; position: relative;">
+  <div id="webviewcontainer" style="width: 100%; height: 100%;position: relative;">
 
-    <webview class="webview" preload="./js/preload.js" autosize="on" src="about:blank" style="display:flex;">
+    <webview class="webview" preload="./js/preload.js" autosize="on" src="about:blank" style="display: flex; height: calc(100vh - 74px); width: 100vw;border: none; ">
 
     </webview>
 
