--- a/history.html
+++ b/history.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <title>History</title>
     <link rel="stylesheet" href="../css/history.css" />
+    <link href="css/controls/materialdesign.css" rel="stylesheet" type="text/css" />
     <style>
         @font-face {
             font-family: "Roboto";
@@ -23,9 +24,11 @@
     </style>
     <script src="../js/jquery-3.1.0.min.js"></script>
     <script src="../js/jquery-ui.min.js"></script>
+        <script src="js/materialdesign.js" type="text/javascript"></script>
 </head>
 
 <body>
+
     <div class="toolbar">
         <h3 style="float: left;">History</h3>
         <div style="float:left;" class="searchBox">
@@ -34,7 +37,7 @@
     </div>
     <div class="content">
         <div class="card">
-
+            
         </div>
     </div>
     <script>
@@ -43,6 +46,7 @@
         }, 1);
     </script>
     <script src="js/history.js"></script>
+
 </body>
 
 </html>
