--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="css/main.css" />
     <link rel="stylesheet" href="css/menu.css" />
     <link rel="stylesheet" href="css/browser.css" />
+    <link href="css/controls/materialdesign.css" rel="stylesheet" type="text/css" />
+    <script src="js/materialdesign.js" type="text/javascript"></script>
     <link href="css/ripple.css" rel="stylesheet" type="text/css" />
 
     <style>
