--- a/test.html
+++ b/test.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>Material Design Controls</title>
-    <link href="css/controls/materialdesign.css" rel="stylesheet" type="text/css" />
+
     <script src="js/jquery-3.1.0.min.js" type="text/javascript"></script>
     <script src="js/jquery-ui.min.js" type="text/javascript"></script>
+    <link href="css/controls/materialdesign.css" rel="stylesheet" type="text/css" />
     <script src="js/materialdesign.js" type="text/javascript"></script>
   </head>
   <body>
@@ -13,5 +14,8 @@
     </div>
     <div class="switch" style="margin-left: 32px;margin-top: 32px;">
     </div>
+    <div class="switch"></div>
+
+    <div class="checkbox" style="margin: 32px;"></div>
   </body>
 </html>
