--- a/history.html
+++ b/history.html
@@ -30,19 +30,33 @@
 <body>
 
     <div class="toolbar">
-        <h3 style="float: left;">History</h3>
-        <div style="float:left;" class="searchBox">
-            <div style="margin-top: 0px;">Search</div>
+        <div class="default-toolbar">
+            <h3 style="float: left;">History</h3>
+            <div style="float:left;" class="searchBox">
+                <div style="margin-top: 0px;">Search</div>
+            </div>
+        </div>
+        <div class="selecteditems-toolbar" style="position: absolute; top: -2px; visibility: hidden;">
+            <div style="float: left;" class="flat-button">
+                <p class="flat-button-content" style="padding-top: 8px; padding-bottom: 8px;">X</p>
+            </div>
+            <p style="float: left; margin-top: 24px;">Selected items: 1</p>
+            <div style="float: right;" class="flat-button">
+                <p class="flat-button-content" style="padding-top: 8px; padding-bottom: 8px;">DELETE</p>
+            </div>
         </div>
     </div>
+
     <div class="content">
         <div class="card">
-            
+
         </div>
     </div>
     <script>
         setInterval(function() {
             $('.searchBox').css('margin-left', (($(window).width() - $('.searchBox').width()) / 2) - 105);
+            $('.selecteditems-toolbar').css('margin-left', (($(window).width() - $('.selecteditems-toolbar').width()) / 2) - 32);
+            $('.selecteditems-toolbar').css('width', $('.card').width());
         }, 1);
     </script>
     <script src="js/history.js"></script>
