added ids for history items

--- a/history.html
+++ b/history.html
@@ -40,7 +40,7 @@
             <div style="float: left;" class="flat-button">
                 <p class="flat-button-content" style="padding-top: 8px; padding-bottom: 8px;">X</p>
             </div>
-            <p style="float: left; margin-top: 24px;">Selected items: 1</p>
+            <p id="selected-items" style="float: left; margin-top: 24px;">Selected items: 1</p>
             <div style="float: right;" class="flat-button">
                 <p class="flat-button-content" style="padding-top: 8px; padding-bottom: 8px;">DELETE</p>
             </div>
