added material design preloader, installed less, fixed suggestions

--- a/history.html
+++ b/history.html
@@ -5,7 +5,8 @@
     <meta charset="utf-8">
     <title>History</title>
     <link rel="stylesheet" href="../css/history.css" />
-    <link href="css/controls/materialdesign.css" rel="stylesheet" type="text/css" />
+    <link href="css/controls/materialdesign.less" rel="stylesheet/less" type="text/css" />
+    <script src="js/less.js" type="text/javascript"></script>
     <style>
         @font-face {
             font-family: "Roboto";
