--- a/test.html
+++ b/test.html
@@ -6,7 +6,8 @@
 
     <script src="js/jquery-3.1.0.min.js" type="text/javascript"></script>
     <script src="js/jquery-ui.min.js" type="text/javascript"></script>
-    <link href="css/controls/materialdesign.css" rel="stylesheet" type="text/css" />
+    <link href="css/controls/materialdesign.less" rel="stylesheet/less" type="text/css" />
+    <script src="js/less.js" type="text/javascript"></script>
     <script src="js/materialdesign.js" type="text/javascript"></script>
   </head>
   <body>
@@ -17,5 +18,7 @@
     <div class="switch"></div>
 
     <div class="checkbox" style="margin: 32px;"></div>
+    <div class="md-preloader"><svg xmlns="http://www.w3.org/2000/svg" version="1.1" height="16" width="16" viewbox="0 0 75 75"><circle cx="37.5" cy="37.5" r="33.5" stroke-width="8"/></svg></div>
+
   </body>
 </html>
