--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <link rel="stylesheet" href="css/main.css" />
     <link rel="stylesheet" href="css/menu.css" />
     <link rel="stylesheet" href="css/browser.css" />
-    <link href="css/controls/materialdesign.css" rel="stylesheet" type="text/css" />
     <script src="js/materialdesign.js" type="text/javascript"></script>
+    <link href="css/controls/materialdesign.less" rel="stylesheet/less" type="text/css" />
+    <script src="js/less.js" type="text/javascript"></script>
     <link href="css/ripple.css" rel="stylesheet" type="text/css" />
 
     <style>
