added some design tweaks

--- a/newtab.html
+++ b/newtab.html
@@ -26,6 +26,7 @@
           src: url('fonts/Roboto-Light.ttf');
       }
     </style>
-    <h1 style="margin-left: 50px; margin-top: 25px; margin-right: 50px;">Welcome to the new tab page! This page is in work in progress.</h1>
+    <h1 style="margin-left: 50px; margin-top: 25px; margin-right: 50px;">New tab page.</h1>
+    <h3 style="margin-left: 50px; margin-top: 25px; margin-right: 50px;">This browser is in early development. Some functions may not work.</h3>
   </body>
 </html>
